--- a/test/test_block_token/test_atx_heading_match.yml
+++ b/test/test_block_token/test_atx_heading_match.yml
@@ -5,5 +5,7 @@
         position: null
     level: 3
     position:
-    - 1
-    - 1
+      data: {}
+      line_end: null
+      line_start: 1
+      uri: null
