--- a/test/test_block_token/test_atx_heading_too_many_hashes.yml
+++ b/test/test_block_token/test_atx_heading_too_many_hashes.yml
@@ -4,5 +4,7 @@
         content: '####### paragraph'
         position: null
     position:
-    - 1
-    - 1
+      data: {}
+      line_end: 1
+      line_start: 1
+      uri: null
