--- a/test/test_block_token/test_block_code_match.yml
+++ b/test/test_block_token/test_block_code_match.yml
@@ -9,5 +9,7 @@
         position: null
     language: ''
     position:
-    - 0
-    - 2
+      data: {}
+      line_end: 2
+      line_start: 0
+      uri: null
