--- a/test/test_block_token/test_doc_read_store_link_defs_basic.yml
+++ b/test/test_block_token/test_doc_read_store_link_defs_basic.yml
@@ -9,8 +9,10 @@ Document:
         - value2
         - ''
       position:
-      - 1
-      - 2
+        data: {}
+        line_end: 2
+        line_start: 1
+        uri: null
   footnotes: {}
   footref_order: []
   front_matter: null
