--- a/test/test_block_token/test_doc_read_with_front_matter_basic.yml
+++ b/test/test_block_token/test_doc_read_with_front_matter_basic.yml
@@ -8,6 +8,8 @@ Document:
 
         '
       position:
-      - 1
-      - 3
+        data: {}
+        line_end: 3
+        line_start: 1
+        uri: null
   link_definitions: {}
