--- a/test/test_block_token/test_list_item_sub_list.yml
+++ b/test/test_block_token/test_list_item_sub_list.yml
@@ -8,8 +8,10 @@
                 content: foo
                 position: null
             position:
-            - 1
-            - 1
+              data: {}
+              line_end: 1
+              line_start: 1
+              uri: null
         - List:
             children:
             - ListItem:
@@ -20,29 +22,39 @@
                         content: bar
                         position: null
                     position:
-                    - 2
-                    - 2
+                      data: {}
+                      line_end: 2
+                      line_start: 2
+                      uri: null
                 leader: '-'
                 loose: false
                 next_marker: null
                 position:
-                - 1
-                - 2
+                  data: {}
+                  line_end: 2
+                  line_start: 1
+                  uri: null
                 prepend: 2
             loose: false
             position:
-            - 1
-            - 2
+              data: {}
+              line_end: 2
+              line_start: 1
+              uri: null
             start_at: null
         leader: '-'
         loose: false
         next_marker: null
         position:
-        - 0
-        - 2
+          data: {}
+          line_end: 2
+          line_start: 0
+          uri: null
         prepend: 2
     loose: false
     position:
-    - 0
-    - 2
+      data: {}
+      line_end: 2
+      line_start: 0
+      uri: null
     start_at: null
