--- a/test/test_block_token/test_table_aligned.yml
+++ b/test/test_block_token/test_table_aligned.yml
@@ -9,8 +9,10 @@
                 content: cell 1
                 position: null
             position:
-            - 3
-            - 3
+              data: {}
+              line_end: null
+              line_start: 3
+              uri: null
         - TableCell:
             align: null
             children:
@@ -18,11 +20,15 @@
                 content: cell 2
                 position: null
             position:
-            - 3
-            - 3
+              data: {}
+              line_end: null
+              line_start: 3
+              uri: null
         position:
-        - 3
-        - 3
+          data: {}
+          line_end: null
+          line_start: 3
+          uri: null
         row_align:
         - 1
         - null
@@ -39,8 +45,10 @@
                 content: header 1
                 position: null
             position:
-            - 1
-            - 1
+              data: {}
+              line_end: null
+              line_start: 1
+              uri: null
         - TableCell:
             align: null
             children:
@@ -48,14 +56,20 @@
                 content: header 2
                 position: null
             position:
-            - 1
-            - 1
+              data: {}
+              line_end: null
+              line_start: 1
+              uri: null
         position:
-        - 1
-        - 1
+          data: {}
+          line_end: null
+          line_start: 1
+          uri: null
         row_align:
         - 1
         - null
     position:
-    - 1
-    - 3
+      data: {}
+      line_end: 3
+      line_start: 1
+      uri: null
