--- a/test/test_block_token/test_table_aligned2.yml
+++ b/test/test_block_token/test_table_aligned2.yml
@@ -9,8 +9,10 @@
                 content: Header
                 position: null
             position:
-            - 3
-            - 3
+              data: {}
+              line_end: null
+              line_start: 3
+              uri: null
         - TableCell:
             align: 0
             children:
@@ -18,8 +20,10 @@
                 content: Title
                 position: null
             position:
-            - 3
-            - 3
+              data: {}
+              line_end: null
+              line_start: 3
+              uri: null
         - TableCell:
             align: 1
             children:
@@ -27,11 +31,15 @@
                 content: Here's this
                 position: null
             position:
-            - 3
-            - 3
+              data: {}
+              line_end: null
+              line_start: 3
+              uri: null
         position:
-        - 3
-        - 3
+          data: {}
+          line_end: null
+          line_start: 3
+          uri: null
         row_align:
         - null
         - 0
@@ -45,8 +53,10 @@
                 content: Paragraph
                 position: null
             position:
-            - 4
-            - 4
+              data: {}
+              line_end: null
+              line_start: 4
+              uri: null
         - TableCell:
             align: 0
             children:
@@ -54,8 +64,10 @@
                 content: Text
                 position: null
             position:
-            - 4
-            - 4
+              data: {}
+              line_end: null
+              line_start: 4
+              uri: null
         - TableCell:
             align: 1
             children:
@@ -63,11 +75,15 @@
                 content: And more
                 position: null
             position:
-            - 4
-            - 4
+              data: {}
+              line_end: null
+              line_start: 4
+              uri: null
         position:
-        - 4
-        - 4
+          data: {}
+          line_end: null
+          line_start: 4
+          uri: null
         row_align:
         - null
         - 0
@@ -86,8 +102,10 @@
                 content: Syntax
                 position: null
             position:
-            - 1
-            - 1
+              data: {}
+              line_end: null
+              line_start: 1
+              uri: null
         - TableCell:
             align: 0
             children:
@@ -95,8 +113,10 @@
                 content: Description
                 position: null
             position:
-            - 1
-            - 1
+              data: {}
+              line_end: null
+              line_start: 1
+              uri: null
         - TableCell:
             align: 1
             children:
@@ -104,15 +124,21 @@
                 content: Test Text
                 position: null
             position:
-            - 1
-            - 1
+              data: {}
+              line_end: null
+              line_start: 1
+              uri: null
         position:
-        - 1
-        - 1
+          data: {}
+          line_end: null
+          line_start: 1
+          uri: null
         row_align:
         - null
         - 0
         - 1
     position:
-    - 1
-    - 4
+      data: {}
+      line_end: 4
+      line_start: 1
+      uri: null
