--- a/test/test_renderers/test_json_renderer/test_basic.yml
+++ b/test/test_renderers/test_json_renderer/test_basic.yml
@@ -5,8 +5,10 @@ children:
     type: RawText
   level: 1
   position:
-  - 5
-  - 6
+    data: {}
+    line_end: 6
+    line_start: 5
+    uri: null
   type: SetextHeading
 - children:
   - content: Atx Header
@@ -14,8 +16,10 @@ children:
     type: RawText
   level: 1
   position:
-  - 8
-  - 8
+    data: {}
+    line_end: null
+    line_start: 8
+    uri: null
   type: Heading
 - children:
   - children:
@@ -33,8 +37,10 @@ children:
     position: null
     type: RawText
   position:
-  - 10
-  - 11
+    data: {}
+    line_end: 11
+    line_start: 10
+    uri: null
   type: Paragraph
 - children:
   - children:
@@ -43,8 +49,10 @@ children:
         position: null
         type: RawText
       position:
-      - 13
-      - 13
+        data: {}
+        line_end: 13
+        line_start: 13
+        uri: null
       type: Paragraph
     leader: '-'
     loose: false
@@ -52,14 +60,18 @@ children:
     - 3
     - '1.'
     position:
-    - 12
-    - 14
+      data: {}
+      line_end: 14
+      line_start: 12
+      uri: null
     prepend: 2
     type: ListItem
   loose: false
   position:
-  - 12
-  - 14
+    data: {}
+    line_end: 14
+    line_start: 12
+    uri: null
   start_at: null
   type: List
 - children:
@@ -69,21 +81,27 @@ children:
         position: null
         type: RawText
       position:
-      - 15
-      - 15
+        data: {}
+        line_end: 15
+        line_start: 15
+        uri: null
       type: Paragraph
     leader: '1.'
     loose: false
     next_marker: null
     position:
-    - 14
-    - 15
+      data: {}
+      line_end: 15
+      line_start: 14
+      uri: null
     prepend: 3
     type: ListItem
   loose: false
   position:
-  - 14
-  - 15
+    data: {}
+    line_end: 15
+    line_start: 14
+    uri: null
   start_at: 1
   type: List
 - children:
@@ -97,12 +115,16 @@ children:
         type: RawText
       type: Emphasis
     position:
-    - 18
-    - 18
+      data: {}
+      line_end: 18
+      line_start: 18
+      uri: null
     type: Paragraph
   position:
-  - 17
-  - 17
+    data: {}
+    line_end: 17
+    line_start: 17
+    uri: null
   type: Quote
 - children:
   - children:
@@ -114,16 +136,20 @@ children:
     title: xyz
     type: Link
   position:
-  - 19
-  - 19
+    data: {}
+    line_end: 19
+    line_start: 19
+    uri: null
   type: Paragraph
 - definitions:
   - - ref
     - abc
     - xyz
   position:
-  - 21
-  - 21
+    data: {}
+    line_end: 21
+    line_start: 21
+    uri: null
   type: LinkDefinition
 - arguments: ''
   children:
@@ -134,8 +160,10 @@ children:
     type: RawText
   language: python
   position:
-  - 23
-  - 25
+    data: {}
+    line_end: 25
+    line_start: 23
+    uri: null
   type: CodeFence
 - children:
   - content: 'block
@@ -147,12 +175,16 @@ children:
     type: RawText
   language: ''
   position:
-  - 26
-  - 29
+    data: {}
+    line_end: 29
+    line_start: 26
+    uri: null
   type: BlockCode
 - position:
-  - 30
-  - 30
+    data: {}
+    line_end: null
+    line_start: 30
+    uri: null
   type: ThematicBreak
 - children:
   - children:
@@ -162,8 +194,10 @@ children:
         position: null
         type: RawText
       position:
-      - 34
-      - 34
+        data: {}
+        line_end: null
+        line_start: 34
+        uri: null
       type: TableCell
     - align: 1
       children:
@@ -171,12 +205,16 @@ children:
         position: null
         type: RawText
       position:
-      - 34
-      - 34
+        data: {}
+        line_end: null
+        line_start: 34
+        uri: null
       type: TableCell
     position:
-    - 34
-    - 34
+      data: {}
+      line_end: null
+      line_start: 34
+      uri: null
     row_align:
     - null
     - 1
@@ -192,8 +230,10 @@ children:
         position: null
         type: RawText
       position:
-      - 32
-      - 32
+        data: {}
+        line_end: null
+        line_start: 32
+        uri: null
       type: TableCell
     - align: 1
       children:
@@ -201,19 +241,25 @@ children:
         position: null
         type: RawText
       position:
-      - 32
-      - 32
+        data: {}
+        line_end: null
+        line_start: 32
+        uri: null
       type: TableCell
     position:
-    - 32
-    - 32
+      data: {}
+      line_end: null
+      line_start: 32
+      uri: null
     row_align:
     - null
     - 1
     type: TableRow
   position:
-  - 32
-  - 34
+    data: {}
+    line_end: 34
+    line_start: 32
+    uri: null
   type: Table
 footnotes: {}
 footref_order: []
@@ -222,8 +268,10 @@ front_matter:
 
     '
   position:
-  - 1
-  - 3
+    data: {}
+    line_end: 3
+    line_start: 1
+    uri: null
   type: FrontMatter
 link_definitions:
   ref:
