--- a/test/test_block_token/test_atx_heading_enclosing_hashes.yml
+++ b/test/test_block_token/test_atx_heading_enclosing_hashes.yml
@@ -5,5 +5,7 @@
         position: null
     level: 1
     position:
-    - 1
-    - 1
+      data: {}
+      line_end: null
+      line_start: 1
+      uri: null
