--- a/test/test_block_token/test_fenced_code_lazy_continuation.yml
+++ b/test/test_block_token/test_fenced_code_lazy_continuation.yml
@@ -11,5 +11,7 @@
         position: null
     language: sh
     position:
-    - 1
-    - 5
+      data: {}
+      line_end: 5
+      line_start: 1
+      uri: null
