--- a/test/test_block_token/test_fenced_code_mixed_tick_tilda.yml
+++ b/test/test_block_token/test_fenced_code_mixed_tick_tilda.yml
@@ -12,5 +12,7 @@
         position: null
     language: markdown
     position:
-    - 1
-    - 5
+      data: {}
+      line_end: 5
+      line_start: 1
+      uri: null
