--- a/test/test_block_token/test_list_item_loose_list.yml
+++ b/test/test_block_token/test_list_item_loose_list.yml
@@ -8,8 +8,10 @@
                 content: foo
                 position: null
             position:
-            - 1
-            - 1
+              data: {}
+              line_end: 1
+              line_start: 1
+              uri: null
         - CodeFence:
             arguments: ''
             children:
@@ -18,17 +20,23 @@
                 position: null
             language: ''
             position:
-            - 2
-            - 5
+              data: {}
+              line_end: 5
+              line_start: 2
+              uri: null
         leader: '-'
         loose: false
         next_marker: null
         position:
-        - 0
-        - 5
+          data: {}
+          line_end: 5
+          line_start: 0
+          uri: null
         prepend: 2
     loose: false
     position:
-    - 0
-    - 5
+      data: {}
+      line_end: 5
+      line_start: 0
+      uri: null
     start_at: null
