--- a/test/test_block_token/test_paragraph_basic.yml
+++ b/test/test_block_token/test_paragraph_basic.yml
@@ -18,5 +18,7 @@
         content: lines
         position: null
     position:
-    - 1
-    - 3
+      data: {}
+      line_end: 3
+      line_start: 1
+      uri: null
