--- a/test/test_block_token/test_setext_heading_match.yml
+++ b/test/test_block_token/test_setext_heading_match.yml
@@ -5,5 +5,7 @@
         position: null
     level: 2
     position:
-    - 1
-    - 2
+      data: {}
+      line_end: 2
+      line_start: 1
+      uri: null
