--- a/test/test_block_token/test_setext_heading_multiline.yml
+++ b/test/test_block_token/test_setext_heading_multiline.yml
@@ -12,13 +12,17 @@
         position: null
     level: 2
     position:
-    - 1
-    - 3
+      data: {}
+      line_end: 3
+      line_start: 1
+      uri: null
 - Paragraph:
     children:
     - RawText:
         content: foobar
         position: null
     position:
-    - 5
-    - 5
+      data: {}
+      line_end: 5
+      line_start: 5
+      uri: null
