--- a/test/test_block_token/test_table_row_no_outside.yml
+++ b/test/test_block_token/test_table_row_no_outside.yml
@@ -7,8 +7,10 @@ TableRow:
           content: cell 1
           position: null
       position:
-      - 0
-      - 0
+        data: {}
+        line_end: null
+        line_start: 0
+        uri: null
   - TableCell:
       align: null
       children:
@@ -16,10 +18,14 @@ TableRow:
           content: cell 2
           position: null
       position:
-      - 0
-      - 0
+        data: {}
+        line_end: null
+        line_start: 0
+        uri: null
   position:
-  - 0
-  - 0
+    data: {}
+    line_end: null
+    line_start: 0
+    uri: null
   row_align:
   - null
