--- a/test/test_footnotes/test_resolution_basic.yml
+++ b/test/test_footnotes/test_resolution_basic.yml
@@ -6,16 +6,20 @@ Document:
           position: null
           target: '1'
       position:
-      - 1
-      - 1
+        data: {}
+        line_end: 1
+        line_start: 1
+        uri: null
   - Paragraph:
       children:
       - FootReference:
           position: null
           target: '1'
       position:
-      - 5
-      - 5
+        data: {}
+        line_end: 5
+        line_start: 5
+        uri: null
   footnotes:
     '1':
       Footnote:
@@ -29,8 +33,10 @@ Document:
                 content: footnote
                 position: null
         position:
-        - 3
-        - 3
+          data: {}
+          line_end: 3
+          line_start: 3
+          uri: null
         target: '1'
   footref_order:
   - '1'
