--- a/test/test_renderers/test_json_renderer/test_link_references.yml
+++ b/test/test_renderers/test_json_renderer/test_link_references.yml
@@ -9,16 +9,20 @@ children:
     title: ''
     type: Link
   position:
-  - 1
-  - 1
+    data: {}
+    line_end: 1
+    line_start: 1
+    uri: null
   type: Paragraph
 - definitions:
   - - baz
     - spam
     - ''
   position:
-  - 3
-  - 3
+    data: {}
+    line_end: 3
+    line_start: 3
+    uri: null
   type: LinkDefinition
 footnotes: {}
 footref_order: []
